tests/baselines/reference/parser519458.errors.txt
==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser519458.ts (2 errors) ====
    import rect = module("rect"); var bar = new rect.Rect();
                        ~
!!! error TS1005: ';' expected.
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'module'.
    